--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,7 +2,13 @@
 $N000: #FFFFFF;
 $N200: #adbac7;
 $N400: #768390;
-$N800: #444c56;
+$N700: #444c56;
+$N800: #373e47;
 $N900: #22272e;
 
+$transparent:  rgba(205,217,229,0.1);
+$transparentNeutral: rgba(99,110,123,0.1);
+
+$overlay: #2d333b;
 $blue: #539bf5;
+$boxShadow: 0 8px 24px #1c2128;
